# camlib

./: .gigignore  .gitignore  404.html  CMakeLists.txt  DOCS.md  Doxyfile  LICENSE  Makefile  README.md  annotated.html  api.js  camlib_8h.html  camlib_8h_source.html  cl__backend_8h.html  cl__backend_8h.js  cl__backend_8h_source.html  cl__bind_8h.html  cl__bind_8h.js  cl__bind_8h_source.html  cl__data_8h.html  cl__data_8h_source.html  cl__enum_8h.html  cl__enum_8h_source.html  cl__ops_8h.html  cl__ops_8h.js  cl__ops_8h_source.html  classes.html  deviceinfo.h  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  dump  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  (+101 more)
.github/workflows/: build.yml
c/: index.html
camlib/: index.html
chdk/: index.html
docs/: DoxygenLayout.xml  c.md  camcontrol.md  camlib.md  chdk.md  examples.md  index.md  js.md  lua.md  ml.md  ptp.md
examples/: Makefile  bindtest.c  directprint.c  eos.c  evtest.c  index.html  info.c  live.c  ml.c  optest.c  pktest.c  storage.c  usb.c  wifi.c  wintest.c
js/: index.html
lib/: lc_main.cpp  lc_main.h  libcamlib.cbp  libcamlib.depend  libcamlib.layout
lua/: camlua.h  index.html  lua.c  runtime.c
ml/: index.html
ptp/: index.html
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  groups_6.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  pages_6.js  pages_7.js  search_index.json  (+8 more)
src/: backend-old.c  backend.c  backend.h  bind.c  bind.h  bindings.h  camlib.h  canon.c  canon.h  canon_adv.c  cl_backend.h  cl_bind.h  cl_data.h  cl_enum.h  cl_ops.h  cl_stuff.h  cli.c  conv.c  data.c  data.h  deviceinfo.c  deviceinfo.h  enum.c  enum.h  enum_dump.c  enums.c  enums.h  error.c  fuji.c  fuji.h  generic.c  ip.c  jni.c  lib.c  libpict.h  libusb-old.c  libusb.c  libusb.c_  libwpd.c  libwpd.h  (+25 more)
src/dec/: Makefile  README.md  main.c  pcap.c
src/lua/: camlua.h  doc.lua  lua.c  runtime.c
src/lua/lua-cjson/: lua_cjson.c
test/: bindtest.c  ci-config.mak  ci.sh  config-fuji.mak  connect.js  data.c  evtest.c  live.c  myci-config.mak  myci.sh  optest.c  pktest.c  rawdraw.c  script.c  storage.c  test.c  test.d  test2.c  wifi.c  wintest.c
